--- a/scss/style.css
+++ b/scss/style.css
@@ -74,7 +74,7 @@
   background: no-repeat, center, center;
   background-size: cover;
   height: 100vh;
-  width: 102%;
+  width: 102vw;
 }
 
 #home #award-winner {
