--- a/scss/partials-css/home.scss
+++ b/scss/partials-css/home.scss
@@ -30,7 +30,7 @@
     background: no-repeat, center, center;
     background-size: cover;
     height: 100vh;
-    width: 102%;
+    width: 102vw;
   }
 
   #award-winner {
