--- a/scss/partials-css/home.css
+++ b/scss/partials-css/home.css
@@ -26,7 +26,7 @@
   background: no-repeat, center, center;
   background-size: cover;
   height: 100vh;
-  width: 102%;
+  width: 102vw;
 }
 
 #home #award-winner {
